# zenguard

./: .gitignore  README.md  pyproject.toml
mongo/: deployment.yaml  service.yaml
tests/: test_zenguard.py
zenguard/: main.py  settings.yaml
zenguard/manifest/: client.yaml  crd.yaml  crd2.yaml  network.yaml
zenguard/utils/database/core/: collection.py  connection.py  db.py
zenguard/utils/database/table/: add.py  delete.py  get.py  query.py  update.py
zenguard/utils/general/: osFunc.py  parse.py
zenguard/utils/k8s/: delete.py  find.py  update.py
zenguard/utils/nacl/: IPUtils.py  security.py
zenguard/utils/report/: k8s.py  network.py
zenguard/utils/wireguard/: generator.py  model.py
